modify crawler for 10k; filename delimiter debug

--- a/1. scraper.ipynb
+++ b/1. scraper.ipynb
@@ -326,8 +326,6 @@
     "\n",
     "    # If the request doesn't fail, continue...\n",
     "    \n",
-    "    print(res)\n",
-    "    \n",
     "    # Parse the response HTML using BeautifulSoup\n",
     "    soup = bs.BeautifulSoup(res.text, \"lxml\")\n",
     "\n",
@@ -408,6 +406,7 @@
     "            continue       \n",
     "        \n",
     "        # If it is available, continue...\n",
+    "        docname = docname.split(' ')[0]\n",
     "        \n",
     "        # Request the file\n",
     "        file = requests.get(doc_url_base % (cik, acc_no.replace('-', ''), docname), headers=headers)\n",
